// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ticket-controls renders for a single ticket 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form>
        <div
          class="d-flex flex-row mb-2 btn-group btn-group-lg"
          role="group"
        >
          <button
            class="d-flex justify-content-center align-items-center btn btn-primary"
            tabindex="1"
            title="Copy branch name"
            type="button"
            value="branch-1"
          >
            <svg
              aria-hidden="true"
              class="octicon octicon-git-branch"
              fill="currentColor"
              focusable="false"
              height="18"
              style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
              viewBox="0 0 16 16"
              width="18"
            >
              <path
                d="M9.5 3.25a2.25 2.25 0 1 1 3 2.122V6A2.5 2.5 0 0 1 10 8.5H6a1 1 0 0 0-1 1v1.128a2.251 2.251 0 1 1-1.5 0V5.372a2.25 2.25 0 1 1 1.5 0v1.836A2.493 2.493 0 0 1 6 7h4a1 1 0 0 0 1-1v-.628A2.25 2.25 0 0 1 9.5 3.25Zm-6 0a.75.75 0 1 0 1.5 0 .75.75 0 0 0-1.5 0Zm8.25-.75a.75.75 0 1 0 0 1.5.75.75 0 0 0 0-1.5ZM4.25 12a.75.75 0 1 0 0 1.5.75.75 0 0 0 0-1.5Z"
              />
            </svg>
            <span
              class="ps-1 small btn-label btn-label-conceal"
            >
              Branch
            </span>
          </button>
          <button
            class="d-flex justify-content-center align-items-center btn btn-primary"
            tabindex="1"
            title="Copy commit message"
            type="button"
            value="commit-1"
          >
            <svg
              aria-hidden="true"
              class="octicon octicon-comment"
              fill="currentColor"
              focusable="false"
              height="18"
              style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
              viewBox="0 0 16 16"
              width="18"
            >
              <path
                d="M1 2.75C1 1.784 1.784 1 2.75 1h10.5c.966 0 1.75.784 1.75 1.75v7.5A1.75 1.75 0 0 1 13.25 12H9.06l-2.573 2.573A1.458 1.458 0 0 1 4 13.543V12H2.75A1.75 1.75 0 0 1 1 10.25Zm1.75-.25a.25.25 0 0 0-.25.25v7.5c0 .138.112.25.25.25h2a.75.75 0 0 1 .75.75v2.19l2.72-2.72a.749.749 0 0 1 .53-.22h4.5a.25.25 0 0 0 .25-.25v-7.5a.25.25 0 0 0-.25-.25Z"
              />
            </svg>
            <span
              class="ps-1 small btn-label btn-label-conceal"
            >
              Message
            </span>
          </button>
          <button
            class="d-flex justify-content-center align-items-center btn btn-primary"
            tabindex="1"
            title="Copy CLI command"
            type="button"
            value="command-1"
          >
            <svg
              aria-hidden="true"
              class="octicon octicon-terminal"
              fill="currentColor"
              focusable="false"
              height="18"
              style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
              viewBox="0 0 16 16"
              width="18"
            >
              <path
                d="M0 2.75C0 1.784.784 1 1.75 1h12.5c.966 0 1.75.784 1.75 1.75v10.5A1.75 1.75 0 0 1 14.25 15H1.75A1.75 1.75 0 0 1 0 13.25Zm1.75-.25a.25.25 0 0 0-.25.25v10.5c0 .138.112.25.25.25h12.5a.25.25 0 0 0 .25-.25V2.75a.25.25 0 0 0-.25-.25ZM7.25 8a.749.749 0 0 1-.22.53l-2.25 2.25a.749.749 0 0 1-1.275-.326.749.749 0 0 1 .215-.734L5.44 8 3.72 6.28a.749.749 0 0 1 .326-1.275.749.749 0 0 1 .734.215l2.25 2.25c.141.14.22.331.22.53Zm1.5 1.5h3a.75.75 0 0 1 0 1.5h-3a.75.75 0 0 1 0-1.5Z"
              />
            </svg>
            <span
              class="ps-1 small btn-label btn-label-conceal"
            >
              Command
            </span>
          </button>
        </div>
        <div>
          <select
            class="form-control form-control-sm"
            disabled=""
            tabindex="1"
          >
            <option
              value="0"
            >
              raz
            </option>
          </select>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <form>
      <div
        class="d-flex flex-row mb-2 btn-group btn-group-lg"
        role="group"
      >
        <button
          class="d-flex justify-content-center align-items-center btn btn-primary"
          tabindex="1"
          title="Copy branch name"
          type="button"
          value="branch-1"
        >
          <svg
            aria-hidden="true"
            class="octicon octicon-git-branch"
            fill="currentColor"
            focusable="false"
            height="18"
            style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
            viewBox="0 0 16 16"
            width="18"
          >
            <path
              d="M9.5 3.25a2.25 2.25 0 1 1 3 2.122V6A2.5 2.5 0 0 1 10 8.5H6a1 1 0 0 0-1 1v1.128a2.251 2.251 0 1 1-1.5 0V5.372a2.25 2.25 0 1 1 1.5 0v1.836A2.493 2.493 0 0 1 6 7h4a1 1 0 0 0 1-1v-.628A2.25 2.25 0 0 1 9.5 3.25Zm-6 0a.75.75 0 1 0 1.5 0 .75.75 0 0 0-1.5 0Zm8.25-.75a.75.75 0 1 0 0 1.5.75.75 0 0 0 0-1.5ZM4.25 12a.75.75 0 1 0 0 1.5.75.75 0 0 0 0-1.5Z"
            />
          </svg>
          <span
            class="ps-1 small btn-label btn-label-conceal"
          >
            Branch
          </span>
        </button>
        <button
          class="d-flex justify-content-center align-items-center btn btn-primary"
          tabindex="1"
          title="Copy commit message"
          type="button"
          value="commit-1"
        >
          <svg
            aria-hidden="true"
            class="octicon octicon-comment"
            fill="currentColor"
            focusable="false"
            height="18"
            style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
            viewBox="0 0 16 16"
            width="18"
          >
            <path
              d="M1 2.75C1 1.784 1.784 1 2.75 1h10.5c.966 0 1.75.784 1.75 1.75v7.5A1.75 1.75 0 0 1 13.25 12H9.06l-2.573 2.573A1.458 1.458 0 0 1 4 13.543V12H2.75A1.75 1.75 0 0 1 1 10.25Zm1.75-.25a.25.25 0 0 0-.25.25v7.5c0 .138.112.25.25.25h2a.75.75 0 0 1 .75.75v2.19l2.72-2.72a.749.749 0 0 1 .53-.22h4.5a.25.25 0 0 0 .25-.25v-7.5a.25.25 0 0 0-.25-.25Z"
            />
          </svg>
          <span
            class="ps-1 small btn-label btn-label-conceal"
          >
            Message
          </span>
        </button>
        <button
          class="d-flex justify-content-center align-items-center btn btn-primary"
          tabindex="1"
          title="Copy CLI command"
          type="button"
          value="command-1"
        >
          <svg
            aria-hidden="true"
            class="octicon octicon-terminal"
            fill="currentColor"
            focusable="false"
            height="18"
            style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
            viewBox="0 0 16 16"
            width="18"
          >
            <path
              d="M0 2.75C0 1.784.784 1 1.75 1h12.5c.966 0 1.75.784 1.75 1.75v10.5A1.75 1.75 0 0 1 14.25 15H1.75A1.75 1.75 0 0 1 0 13.25Zm1.75-.25a.25.25 0 0 0-.25.25v10.5c0 .138.112.25.25.25h12.5a.25.25 0 0 0 .25-.25V2.75a.25.25 0 0 0-.25-.25ZM7.25 8a.749.749 0 0 1-.22.53l-2.25 2.25a.749.749 0 0 1-1.275-.326.749.749 0 0 1 .215-.734L5.44 8 3.72 6.28a.749.749 0 0 1 .326-1.275.749.749 0 0 1 .734.215l2.25 2.25c.141.14.22.331.22.53Zm1.5 1.5h3a.75.75 0 0 1 0 1.5h-3a.75.75 0 0 1 0-1.5Z"
            />
          </svg>
          <span
            class="ps-1 small btn-label btn-label-conceal"
          >
            Command
          </span>
        </button>
      </div>
      <div>
        <select
          class="form-control form-control-sm"
          disabled=""
          tabindex="1"
        >
          <option
            value="0"
          >
            raz
          </option>
        </select>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ticket-controls renders for multiple tickets 1`] = `
<DocumentFragment>
  <form>
    <div
      class="d-flex flex-row mb-2 btn-group btn-group-lg"
      role="group"
    >
      <button
        class="d-flex justify-content-center align-items-center btn btn-primary"
        tabindex="1"
        title="Copy branch name"
        type="button"
        value="branch-1"
      >
        <svg
          aria-hidden="true"
          class="octicon octicon-git-branch"
          fill="currentColor"
          focusable="false"
          height="18"
          style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
          viewBox="0 0 16 16"
          width="18"
        >
          <path
            d="M9.5 3.25a2.25 2.25 0 1 1 3 2.122V6A2.5 2.5 0 0 1 10 8.5H6a1 1 0 0 0-1 1v1.128a2.251 2.251 0 1 1-1.5 0V5.372a2.25 2.25 0 1 1 1.5 0v1.836A2.493 2.493 0 0 1 6 7h4a1 1 0 0 0 1-1v-.628A2.25 2.25 0 0 1 9.5 3.25Zm-6 0a.75.75 0 1 0 1.5 0 .75.75 0 0 0-1.5 0Zm8.25-.75a.75.75 0 1 0 0 1.5.75.75 0 0 0 0-1.5ZM4.25 12a.75.75 0 1 0 0 1.5.75.75 0 0 0 0-1.5Z"
          />
        </svg>
        <span
          class="ps-1 small btn-label btn-label-conceal"
        >
          Branch
        </span>
      </button>
      <button
        class="d-flex justify-content-center align-items-center btn btn-primary"
        tabindex="1"
        title="Copy commit message"
        type="button"
        value="commit-1"
      >
        <svg
          aria-hidden="true"
          class="octicon octicon-comment"
          fill="currentColor"
          focusable="false"
          height="18"
          style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
          viewBox="0 0 16 16"
          width="18"
        >
          <path
            d="M1 2.75C1 1.784 1.784 1 2.75 1h10.5c.966 0 1.75.784 1.75 1.75v7.5A1.75 1.75 0 0 1 13.25 12H9.06l-2.573 2.573A1.458 1.458 0 0 1 4 13.543V12H2.75A1.75 1.75 0 0 1 1 10.25Zm1.75-.25a.25.25 0 0 0-.25.25v7.5c0 .138.112.25.25.25h2a.75.75 0 0 1 .75.75v2.19l2.72-2.72a.749.749 0 0 1 .53-.22h4.5a.25.25 0 0 0 .25-.25v-7.5a.25.25 0 0 0-.25-.25Z"
          />
        </svg>
        <span
          class="ps-1 small btn-label btn-label-conceal"
        >
          Message
        </span>
      </button>
      <button
        class="d-flex justify-content-center align-items-center btn btn-primary"
        tabindex="1"
        title="Copy CLI command"
        type="button"
        value="command-1"
      >
        <svg
          aria-hidden="true"
          class="octicon octicon-terminal"
          fill="currentColor"
          focusable="false"
          height="18"
          style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
          viewBox="0 0 16 16"
          width="18"
        >
          <path
            d="M0 2.75C0 1.784.784 1 1.75 1h12.5c.966 0 1.75.784 1.75 1.75v10.5A1.75 1.75 0 0 1 14.25 15H1.75A1.75 1.75 0 0 1 0 13.25Zm1.75-.25a.25.25 0 0 0-.25.25v10.5c0 .138.112.25.25.25h12.5a.25.25 0 0 0 .25-.25V2.75a.25.25 0 0 0-.25-.25ZM7.25 8a.749.749 0 0 1-.22.53l-2.25 2.25a.749.749 0 0 1-1.275-.326.749.749 0 0 1 .215-.734L5.44 8 3.72 6.28a.749.749 0 0 1 .326-1.275.749.749 0 0 1 .734.215l2.25 2.25c.141.14.22.331.22.53Zm1.5 1.5h3a.75.75 0 0 1 0 1.5h-3a.75.75 0 0 1 0-1.5Z"
          />
        </svg>
        <span
          class="ps-1 small btn-label btn-label-conceal"
        >
          Command
        </span>
      </button>
    </div>
    <div>
      <select
        class="form-control form-control-sm"
        tabindex="1"
      >
        <option
          value="0"
        >
          raz
        </option>
        <option
          value="1"
        >
          dva
        </option>
        <option
          value="2"
        >
          tri
        </option>
      </select>
    </div>
  </form>
</DocumentFragment>
`;
